# ferrite

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  imgui.ini
include/: application.hpp  camera.hpp  class_decorations.hpp  engine.hpp  engine_init_info.hpp  gbuffers.hpp  hdr_target.hpp  include.hpp  input_manager.hpp  mesh.hpp  mesh_primitives.hpp  model_loader.hpp  performance_tracker.hpp  sdl_app.hpp  single_time_commands.hpp  stopwatch.hpp  swap_chain.hpp  util.hpp  vulkan_brain.hpp  vulkan_helper.hpp  vulkan_validation.hpp
include/linux/: linux_app.hpp
include/pipelines/: geometry_pipeline.hpp  ibl_pipeline.hpp  lighting_pipeline.hpp  skydome_pipeline.hpp  tonemapping_pipeline.hpp
include/shaders/: shader_loader.hpp
include/win/: sdl_app.hpp  win_app.hpp
shaders/: brdf_integration-f.spv  brdf_integration-v.spv  brdf_integration.frag  comp.bat  compile.bat  geom-f.spv  geom-v.spv  geom.frag  geom.vert  irradiance-f.spv  irradiance.frag  lighting-f.spv  lighting.frag  prefilter-f.spv  prefilter.frag  shader_comp.py  skydome-f.spv  skydome-v.spv  skydome.frag  skydome.vert  tonemapping-f.spv  tonemapping.frag  tonemapping.vert  triangle-f.spv  triangle-v.spv  triangle.frag  triangle.vert
src/: application.cpp  engine.cpp  gbuffers.cpp  input_manager.cpp  main.cpp  mesh.cpp  mesh_primitives.cpp  model_loader.cpp  performance_tracker.cpp  sdl_app.cpp  single_time_commands.cpp  swap_chain.cpp  vulkan_brain.cpp  vulkan_helper.cpp  vulkan_validation.cpp
src/linux/: linux_app.cpp
src/pipelines/: geometry_pipeline.cpp  ibl_pipeline.cpp  lighting_pipeline.cpp  skydome_pipeline.cpp  tonemapping_pipeline.cpp
src/shaders/: shader_loader.cpp
src/win/: sdl_app.cpp  win_app.cpp
